objects/APTS_Stage_Master_Picklist__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Code_Description__c</fullName>
        <label>Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code_Used_For__c</fullName>
        <label>Code Used For</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <description>Country in MPL</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Picklist Table</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Stage Master Picklist</relationshipLabel>
        <relationshipName>Stage_Master_Picklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <defaultValue>&quot;Initial Load&quot;</defaultValue>
        <label>Row Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stage Master Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Operational_Object__c</columns>
        <columns>APTS_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Master Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Master Picklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>